--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.8.4",
     "nodemon": "^3.1.7",
+    "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.10.4",
     "typedi": "^0.10.0"
   },
