--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "microframework-w3tec": "^0.6.3",
     "mongodb": "^6.12.0",
     "mongoose": "^8.8.4",
     "nodemon": "^3.1.7",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.10.4",
-    "typedi": "^0.10.0"
+    "typedi": "^0.8.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
