--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "microframework-w3tec": "^0.6.3",
     "mongodb": "^6.12.0",
     "mongoose": "^8.8.4",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.10.4",
@@ -32,6 +33,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
+    "@types/nodemailer": "^6.4.17",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
