--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "nodemon": "^3.1.7",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.10.4",
-    "typedi": "^0.8.0"
+    "typedi": "^0.8.0",
+    "uuid": "^11.0.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
