initialize strict type checking

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nodemon server.ts",
     "dev": "nodemon -L server.ts ",
-    "build": "npm start build"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
